[package]
name = "os"
version = "0.1.0"
authors = ["cena"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = {path = "src/riscv"}

buddy_system_allocator = {path = "src/buddy_system_allocator"}

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

algorithm = {path = "src/algorithm"}

spin = "0.5.2"

bitflags = "1.2.1"

bit_field = "0.10.0"
